--- a/example.ipynb
+++ b/example.ipynb
@@ -2,165 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting shap\n",
-      "  Downloading shap-0.47.2-cp312-cp312-win_amd64.whl.metadata (25 kB)\n",
-      "Requirement already satisfied: numpy in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from shap) (1.26.4)\n",
-      "Requirement already satisfied: scipy in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from shap) (1.15.2)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from shap) (1.6.1)\n",
-      "Requirement already satisfied: pandas in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from shap) (2.2.2)\n",
-      "Requirement already satisfied: tqdm>=4.27.0 in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from shap) (4.66.5)\n",
-      "Requirement already satisfied: packaging>20.9 in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from shap) (24.1)\n",
-      "Collecting slicer==0.0.8 (from shap)\n",
-      "  Downloading slicer-0.0.8-py3-none-any.whl.metadata (4.0 kB)\n",
-      "Collecting numba>=0.54 (from shap)\n",
-      "  Downloading numba-0.61.2-cp312-cp312-win_amd64.whl.metadata (2.9 kB)\n",
-      "Requirement already satisfied: cloudpickle in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from shap) (3.1.1)\n",
-      "Requirement already satisfied: typing-extensions in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from shap) (4.12.2)\n",
-      "Collecting llvmlite<0.45,>=0.44.0dev0 (from numba>=0.54->shap)\n",
-      "  Downloading llvmlite-0.44.0-cp312-cp312-win_amd64.whl.metadata (5.0 kB)\n",
-      "Requirement already satisfied: colorama in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from tqdm>=4.27.0->shap) (0.4.6)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas->shap) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas->shap) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas->shap) (2024.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from python-dateutil>=2.8.2->pandas->shap) (1.16.0)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from scikit-learn->shap) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\lenovo\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from scikit-learn->shap) (3.5.0)\n",
-      "Downloading shap-0.47.2-cp312-cp312-win_amd64.whl (545 kB)\n",
-      "   ---------------------------------------- 0.0/545.2 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 545.2/545.2 kB 9.1 MB/s eta 0:00:00\n",
-      "Downloading slicer-0.0.8-py3-none-any.whl (15 kB)\n",
-      "Downloading numba-0.61.2-cp312-cp312-win_amd64.whl (2.8 MB)\n",
-      "   ---------------------------------------- 0.0/2.8 MB ? eta -:--:--\n",
-      "   ------------------------- -------------- 1.8/2.8 MB 8.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.8/2.8 MB 7.8 MB/s eta 0:00:00\n",
-      "Downloading llvmlite-0.44.0-cp312-cp312-win_amd64.whl (30.3 MB)\n",
-      "   ---------------------------------------- 0.0/30.3 MB ? eta -:--:--\n",
-      "   - -------------------------------------- 1.3/30.3 MB 8.4 MB/s eta 0:00:04\n",
-      "   --- ------------------------------------ 2.6/30.3 MB 6.9 MB/s eta 0:00:05\n",
-      "   ----- ---------------------------------- 3.9/30.3 MB 6.9 MB/s eta 0:00:04\n",
-      "   ------- -------------------------------- 5.5/30.3 MB 6.7 MB/s eta 0:00:04\n",
-      "   -------- ------------------------------- 6.8/30.3 MB 6.7 MB/s eta 0:00:04\n",
-      "   ---------- ----------------------------- 7.9/30.3 MB 6.6 MB/s eta 0:00:04\n",
-      "   ------------ --------------------------- 9.4/30.3 MB 6.5 MB/s eta 0:00:04\n",
-      "   ------------- -------------------------- 10.5/30.3 MB 6.4 MB/s eta 0:00:04\n",
-      "   --------------- ------------------------ 11.8/30.3 MB 6.5 MB/s eta 0:00:03\n",
-      "   ----------------- ---------------------- 13.4/30.3 MB 6.5 MB/s eta 0:00:03\n",
-      "   ------------------- -------------------- 14.7/30.3 MB 6.5 MB/s eta 0:00:03\n",
-      "   -------------------- ------------------- 15.7/30.3 MB 6.4 MB/s eta 0:00:03\n",
-      "   ---------------------- ----------------- 17.3/30.3 MB 6.5 MB/s eta 0:00:03\n",
-      "   ------------------------ --------------- 18.6/30.3 MB 6.5 MB/s eta 0:00:02\n",
-      "   ------------------------- -------------- 19.4/30.3 MB 6.3 MB/s eta 0:00:02\n",
-      "   -------------------------- ------------- 20.4/30.3 MB 6.3 MB/s eta 0:00:02\n",
-      "   ---------------------------- ----------- 21.8/30.3 MB 6.3 MB/s eta 0:00:02\n",
-      "   ------------------------------ --------- 23.1/30.3 MB 6.3 MB/s eta 0:00:02\n",
-      "   ------------------------------- -------- 24.1/30.3 MB 6.3 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 25.7/30.3 MB 6.3 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 27.3/30.3 MB 6.4 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 28.8/30.3 MB 6.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  30.1/30.3 MB 6.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 30.3/30.3 MB 6.4 MB/s eta 0:00:00\n",
-      "Installing collected packages: slicer, llvmlite, numba, shap\n",
-      "\n",
-      "   ---------- ----------------------------- 1/4 [llvmlite]\n",
-      "   ---------- ----------------------------- 1/4 [llvmlite]\n",
-      "   ---------- ----------------------------- 1/4 [llvmlite]\n",
-      "   ---------- ----------------------------- 1/4 [llvmlite]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   -------------------- ------------------- 2/4 [numba]\n",
-      "   ------------------------------ --------- 3/4 [shap]\n",
-      "   ------------------------------ --------- 3/4 [shap]\n",
-      "   ------------------------------ --------- 3/4 [shap]\n",
-      "   ------------------------------ --------- 3/4 [shap]\n",
-      "   ------------------------------ --------- 3/4 [shap]\n",
-      "   ------------------------------ --------- 3/4 [shap]\n",
-      "   ------------------------------ --------- 3/4 [shap]\n",
-      "   ------------------------------ --------- 3/4 [shap]\n",
-      "   ---------------------------------------- 4/4 [shap]\n",
-      "\n",
-      "Successfully installed llvmlite-0.44.0 numba-0.61.2 shap-0.47.2 slicer-0.0.8\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install shap"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from"
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "train = pd.read_csv('train.csv')\n",
+    "test  = pd.read_csv('test.csv')\n",
+    "\n",
+    "X = train.drop(columns='')"
    ]
   }
  ],
